# mininn

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  TODO.md  makefile
.github/: dependabot.yml
.github/workflows/: deploy.yml  dev.yml  rust.yml
examples/: custom.rs  custom_layer.rs  iris.rs  mnist.rs  mnist_conv.rs  mnist_load_nn.rs  xor.rs  xor_load_nn.rs
mininn-derive/: Cargo.toml
mininn-derive/src/: lib.rs
src/: activation.rs  activation_type.rs  cost.rs  error.rs  layer.rs  lib.rs  main.rs  nn.rs  save_config.rs
src/core/: error.rs  mod.rs  nn.rs  train_config.rs
src/layers/: activation.rs  base_layer.rs  batchnorm.rs  conv.rs  dense.rs  dropout.rs  flatten.rs  layer.rs  mod.rs
src/layers/types/: activation.rs  batchnorm.rs  conv.rs  conv2d.rs  dense.rs  dropout.rs  flatten.rs  mod.rs  reshape.rs
src/registers/: activation_register.rs  cost_register.rs  global_register.rs  layer_register.rs  mod.rs  register.rs
src/utils/: act.rs  activation.rs  activation_func.rs  correlation.rs  cost.rs  format.rs  formatting.rs  layer_register.rs  metrics.rs  mod.rs  nn_util.rs  optimizer.rs  optimizers.rs
tests/: integration.rs
