[package]
name = "mininn"
version = "0.1.0"
edition = "2021"

[dependencies]
hdf5 = { version = "0.8.1", feature = ["ndarray", "blocs"] }
ndarray = { version = "0.16.1", features = ["serde"] }
ndarray-rand = "0.15.0"
rand = "0.8.5"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"

[dev-dependencies]
mnist = "0.6.0"
approx = "0.5.1"

