[package]
name = "mininn"
version = "0.1.4-dev"
edition = "2021"
license = "MIT"
description = "A minimalist deep learnig crate for rust."
authors = ["Paco Algar"]
readme = "README.md"
repository = "https://github.com/Pacatro/mininn"
documentation = "https://docs.rs/mininn"
keywords = ["deep-learning", "machine-learning", "neural-networks", "ndarray", "hdf5"]

[dependencies]
# hdf5 = { version = "0.8.1", feature = ["ndarray"] }
hdf5 = "0.8.1"
ndarray = { version = "0.16.1", features = ["serde"] }
ndarray-rand = "0.15.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"

[dev-dependencies]
mnist = "0.6.0"
linfa-datasets = { version = "0.7.0", features = ["iris"] }
