[package]
name = "mininn-derive"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Deive macros for mininn crate."
authors = ["Paco Algar"]
repository = "https://github.com/Pacatro/mininn"
documentation = "https://docs.rs/mininn"
keywords = ["deep-learning", "machine-learning", "neural-networks", "ndarray", "hdf5"]

[dependencies]
quote = "1.0.37"
syn = "2.0.90"

[lib]
proc-macro = true
